--- a/RestaurantManager/RestaurantManager/ExpeditePage.xaml
+++ b/RestaurantManager/RestaurantManager/ExpeditePage.xaml
@@ -7,11 +7,17 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource AppBarBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.9*"/>
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
+        <GridView Grid.Row="0" Background="#FFF06F6F"/>
         <TextBlock Grid.Row="1" Text="**Clear All Orders**" TextAlignment="Center" VerticalAlignment="Center"/>
+        <AppBar>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                <AppBarButton Icon="Home" Label="Home" Click="AppBarButton_Click" />
+            </StackPanel>
+        </AppBar>
     </Grid>
 </Page>
