--- a/RestaurantManager/RestaurantManager/ExpeditePage.xaml
+++ b/RestaurantManager/RestaurantManager/ExpeditePage.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
         <GridView Grid.Row="0" Background="#FFF06F6F"/>
-        <TextBlock Grid.Row="1" Text="**Clear All Orders**" TextAlignment="Center" VerticalAlignment="Center"/>
+        <Button Content="Clear All Orders" HorizontalAlignment="Center" Grid.Row="1"/>
         <AppBar>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                 <AppBarButton Icon="Home" Label="Home" Click="AppBarButton_Click" />
